# deepset-cloud-cli

./: Cargo.toml  README.md  env.example
deepset-cloud-api/: Cargo.toml
deepset-cloud-api/src/: lib.rs  settings.rs  types.rs
deepset-cloud-api/src/endpoints/: mod.rs  pipeline.rs  workspace.rs
deepset-cloud-api/src/types/: mod.rs  pipeline.rs
pipelines/: README.md
pipelines/RAG-Chat-gpt3.5-en/: indexing.yaml  query.yaml
pipelines/RAG-QA-SpellChecking-en/: indexing.yaml  query.yaml
src/: cli.rs  main.rs
