[package]
name = "deepset-cloud-api"
version = "0.1.0"
edition = "2021"

[dependencies]
apisdk = "0.0.15"
chrono = { version = "0.4.38", features = ["serde"] }
config = "0.14.0"
derive-getters = "0.5.0"
serde = "1.0.210"
tracing = "0.1.40"
uuid = { version = "1.11.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }